flex-wrap bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -29,7 +29,7 @@ body {
     main {
         /* flex: 2; */
         display: flex;
-        flex-direction: wrap;
+        flex-wrap: wrap;
         justify-content: center;
         order: 2;
         min-height: 80vh;
